Fix #4629: label and alert alignment

--- a/form-runner/jvm/src/main/assets/xbl/orbeon/error-summary/error-summary.less
+++ b/form-runner/jvm/src/main/assets/xbl/orbeon/error-summary/error-summary.less
@@ -63,11 +63,6 @@
             &.fr-level-error   { border-color: @error; }
         }
 
-        .fr-error-number, .fr-error-link, .fr-error-alert {
-            padding: 2px 0;
-            vertical-align: top;
-        }
-
         .fr-error-number {
             display: none;
         }
@@ -85,7 +80,6 @@
         }
 
         .fr-error-alert {
-            vertical-align: top;
             ul {
                 list-style-type: square;
                 margin-bottom: 0;
